Have explicit creation vs editing.

--- a/app/views/view_page.scala.html
+++ b/app/views/view_page.scala.html
@@ -1,14 +1,12 @@
 @(
+pageId: String,
         title: String,
         content: Html
 )
 <!doctype html>
 <html><head><title>@title</title></head>
     <body>
-        <form method="post" action="/setup" id="form">
-            <button type="submit" name="setup" id="setup">Setup</button>
-        </form>
-
+        <p><a href="/edit?pageid=@pageId">Edit page</a></p>
         <div id="content">
             @content
         </div>
