--- a/app/views/view_page.scala.html
+++ b/app/views/view_page.scala.html
@@ -6,7 +6,7 @@ pageId: String,
 <!doctype html>
 <html><head><title>@title</title></head>
     <body>
-        <p><a href="/edit?pageid=@pageId">Edit page</a></p>
+        <p><a href="/edit-page?page-id=@pageId" rel="edit">Edit page</a></p>
         <div id="content">
             @content
         </div>
