Add some styling for ease of use.

--- a/app/views/create_not_found.scala.html
+++ b/app/views/create_not_found.scala.html
@@ -1,6 +1,8 @@
 @(pageId: String)
 <!doctype html>
-<html><head><title>Page not found!</title></head>
+<html><head><title>Page not found!</title>
+<link rel="stylesheet" type="text/css" href="/assets/default.css"/>
+</head>
     <body>
         <h1>Page not found</h1>
         <p>Page was not found, but it is possible to create_not_found it :-)</p>
