--- a/app/views/view_page.scala.html
+++ b/app/views/view_page.scala.html
@@ -4,7 +4,9 @@ pageId: String,
         content: Html
 )
 <!doctype html>
-<html><head><title>@title</title></head>
+<html><head><title>@title</title>
+    <link rel="stylesheet" type="text/css" href="/assets/default.css"/>
+</head>
     <body>
         <p><a href="/edit-page?page-id=@pageId" rel="edit">Edit page</a></p>
         <div id="content">
