--- a/app/views/edit.scala.html
+++ b/app/views/edit.scala.html
@@ -1,16 +1,9 @@
 @(pageId: String, content: String)
-<!doctype html>
-<html><head><title>Editing @pageId</title>
-
-    <link rel="stylesheet" type="text/css" href="/assets/default.css"/>
-
-</head>
-    <body>
-        <h1>Editing page @pageId</h1>
-        <form method="post" action="/edit-page?page-id=@pageId" id="form">
-            <p>Page id: <code>@pageId</code></p>
-            <textarea id="edit-box" name="content">@content</textarea>
-            <button type="submit">Update</button>
-        </form>
-    </body>
-</html>
+@common(s"Editing ${pageId}") {
+    <h1>Editing page @pageId</h1>
+    <form method="post" action="/edit-page?page-id=@pageId" id="form">
+        <p>Page id: <code>@pageId</code></p>
+        <textarea id="edit-box" name="content">@content</textarea>
+        <button type="submit">Update</button>
+    </form>
+}
